<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_my_iq">About My iQ</string>
    <string name="acc_number">Acc #</string>
    <string name="accept">Accept</string>
    <string name="account_activation_suggestion">Please contact support for assistance activating your account.</string>
    <string name="acoustic_power_alert_message">You’ve selected the %1$s preset. Do you want to change to LOW power?</string>
    <string name="acoustic_power_alert_title">Acoustic Power is set to NORMAL</string>
    <string name="acoustic_power_setting">Acoustic Power Setting</string>
    <string name="aium_manual">AIUM Manual</string>
    <string name="all_studies_uploaded">All queued studies have been uploaded</string>
    <string name="always_allow_firmware_update">Always Allow Firmware Update</string>
    <string name="annotation_delete_annotation">Delete Annotation?</string>
    <string name="annotation_delete_ellipse">Delete Ellipse?</string>
    <string name="annotation_delete_ellipse_formatter">Delete Ellipse \"%s\"?</string>
    <string name="annotation_delete_line">Delete Line?</string>
    <string name="annotation_delete_line_formatter">Delete Line \"%s\"?</string>
    <string name="annotation_text_tool_hint">Search or Create New Annotation</string>
    <string name="annotation_text_tool_no_suggestions">No Suggestions</string>
    <string name="app">App</string>
    <string name="app_name">Butterfly iQ</string>
    <string name="app_version_error_connect_to_internet_message">The Butterfly iQ app must connect to the internet every 30 days. Please connect to the internet or contact support to request an offline extension.</string>
    <string name="app_version_error_connect_to_internet_title">Connect to the internet to use app</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_destination">Butterfly Archive Destination</string>
    <string name="archive_picker_create">Create an Archive…</string>
    <string name="archive_picker_title">Select an Archive</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="auto_freeze">Auto-Freeze</string>
    <string name="auto_freeze_engaged">Auto-Freeze engaged to save battery life</string>
    <string name="back">Back</string>
    <string name="basic">Basic</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large">File too large</string>
    <string name="belvedere_image_stream_title">Photo library</string>
    <string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
    <string name="belvedere_permissions_denied">Permissions denied</string>
    <string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
    <string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
    <string name="belvedere_stream_item_select_file_desc">Select file %s</string>
    <string name="belvedere_stream_item_select_image_desc">Select image %s</string>
    <string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
    <string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
    <string name="belvedere_toolbar_desc_collapse">Close image picker</string>
    <string name="bone">Bone</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="butterfly_address">"530 Old Whitfield St
Guilford, CT 06437"</string>
    <string name="butterfly_help_error">Unable to contact Butterfly Help.</string>
    <string name="butterfly_network_inc">Butterfly Network, Inc.</string>
    <string name="call_support">Call Support</string>
    <string name="cancel">Cancel</string>
    <string name="capture_and_record">Capture and Record</string>
    <string name="capture_cine">Capture Cine</string>
    <string name="capture_with_annotations_and_measurements">Capture cines and images with annotations &amp; measurements</string>
    <string name="categories_list_fragment_error_message">Failed to get categories</string>
    <string name="centimeter_float_formatter">%.2f cm</string>
    <string name="centimeter_formatter">%1$dcm</string>
    <string name="centimeter_per_second">cm/s</string>
    <string name="change_to_low_power">Change to LOW power</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear">Clear</string>
    <string name="clear_images">Clear Images</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color_doppler_flow_velocity">Color Doppler Flow Velocity</string>
    <string name="com.crashlytics.android.build_id">f3729252-43ee-494c-bedf-c484997c1523</string>
    <string name="comment_and_tag">Comment and Tag</string>
    <string name="comment_notifications">Comment Notifications</string>
    <string name="comment_notifications_email_subtitle">When a member of my organization comments on my images or mentions me</string>
    <string name="comment_notifications_email_title">Notify me via email</string>
    <string name="comments">Comments</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="compatibility_subtitle">"Your device isn't compatible with this app."</string>
    <string name="compatibility_title">Device not supported</string>
    <string name="continue_">Continue</string>
    <string name="day">Day</string>
    <string name="depth">Depth</string>
    <string name="discover_butterfly_iq">Discover Butterfly iQ</string>
    <string name="email">Email</string>
    <string name="forgot_password">Trouble logging in?</string>
    <string name="forgot_password_button">Send email</string>
    <string name="forgot_password_title">To resend your invitation link or reset your password, enter your email below.</string>
    <string name="gain_tgc">Gain/TGC</string>
    <string name="learn_more">Learn More</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="month">Month</string>
    <string name="non_enterprise_user_login_with_butterfly">" Not an Enterprise user? "<b>Log in with Butterfly</b>" "</string>
    <string name="patient">Patient</string>
    <string name="patient_editor_accession_number">Accession #</string>
    <string name="patient_editor_dob">DOB</string>
    <string name="patient_editor_first_name">First Name</string>
    <string name="patient_editor_last_name">Last Name</string>
    <string name="patient_editor_middle_name">Middle Name</string>
    <string name="patient_editor_mrn">MRN</string>
    <string name="patient_editor_sex">Sex</string>
    <string name="patient_editor_suffix">Suffix</string>
    <string name="patient_editor_title">Title</string>
    <string name="percentage_formatter">%1$d%%</string>
    <string name="register">Register</string>
    <string name="register_iq_description">Register an owner for this probe in order to continue. Owners of probes can take special actions like deactivating them in the event they are lost or stolen.</string>
    <string name="register_iq_title">Register Your iQ</string>
    <string name="registering_iq">Registering your iQ…</string>
    <string name="tgc">TGC</string>
    <string name="year">Year</string>
    <string name="your_enterprise_url">your-enterprise-url</string>
</resources>