<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.butterflynetinc.helios.exam.views.parameteroverlay.ParameterHudView android:orientation="vertical" android:id="@id/gainHudView" android:padding="@dimen/grid8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid8" app:axis="horizontal" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:title="@string/gain_tgc" app:valueFormat="@string/percentage_formatter" />
    <com.butterflynetinc.helios.exam.views.parameteroverlay.ParameterHudView android:orientation="vertical" android:id="@id/depthHudView" android:padding="@dimen/grid8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/grid16" app:axis="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" app:title="@string/depth" app:valueFormat="@string/centimeter_formatter" />
    <TextView android:id="@id/tgcButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/grid16" android:text="@string/tgc" android:drawableStart="@drawable/ic_tgc" android:paddingHorizontal="@dimen/grid16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/BniSmallTextViewButton" />
</merge>