<?xml version="1.0" encoding="utf-8"?>
<com.butterflynetinc.helios.patienteditor.PatientEditorView android:background="#fff1f1f1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.butterflynetinc.helios.design.view.TitleBar android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:menu="@menu/menu_save" app:title="@string/patient" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/grid40" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:hint="@string/patient_editor_last_name" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/lastNameEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="64" android:inputType="textPersonName|textCapWords" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid16" android:hint="@string/patient_editor_first_name" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/firstNameEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="64" android:inputType="textPersonName|textCapWords" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid16" android:hint="@string/patient_editor_middle_name" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/middleNameEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="64" android:inputType="textPersonName|textCapWords" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid16" android:hint="@string/patient_editor_title" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/titleEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="16" android:inputType="textPersonName|textCapWords" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid16" android:hint="@string/patient_editor_suffix" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/suffixEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="16" android:inputType="textPersonName|textCapWords" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:hint="@string/patient_editor_sex" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormDropdownTextInputLayout">
                <AutoCompleteTextView android:id="@id/sexEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:completionThreshold="1" style="@style/FormDropdownAutoCompleteText" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:baselineAligned="false" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list">
                <com.google.android.material.textfield.TextInputLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/month" android:layout_weight="2.0" style="@style/FormDropdownTextInputLayout">
                    <AutoCompleteTextView android:id="@id/dobMonthEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/FormDropdownAutoCompleteText" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/day" android:layout_weight="1.0" android:layout_marginStart="@dimen/grid16" style="@style/FormTextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/dobDayEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="2" android:inputType="number" style="@style/FormTextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/year" android:layout_weight="1.0" android:layout_marginStart="@dimen/grid16" style="@style/FormTextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText android:id="@id/dobYearEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="4" android:inputType="number" style="@style/FormTextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView android:textColor="@color/bni_grey25" android:id="@id/dobText" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/patient_editor_dob" android:paddingStart="@dimen/grid12" android:layout_marginEnd="@dimen/grid16" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/BniText.ExtraSmall" />
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:hint="@string/patient_editor_accession_number" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/accessionEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="16" android:inputType="textNoSuggestions" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:hint="@string/patient_editor_mrn" android:layout_marginHorizontal="@dimen/horizontal_large_gutter_list" style="@style/FormTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/mrnEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="64" android:inputType="textNoSuggestions" style="@style/FormTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton android:textColor="@color/bni_red" android:id="@id/clearButton" android:padding="@dimen/grid12" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:foreground="@drawable/ripple_dark" android:text="@string/clear" app:backgroundTint="@color/bni_white" app:cornerRadius="0.0dip" app:layout_constraintBottom_toBottomOf="parent" style="@style/BniBaseTextButton" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.butterflynetinc.helios.patienteditor.PatientEditorView>