<?xml version="1.0" encoding="utf-8"?>
<com.butterflynetinc.helios.login.forgotpassword.ForgotPasswordView android:background="@color/bni_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.butterflynetinc.helios.design.view.TitleBar android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_constraintTop_toTopOf="parent" app:title="@string/forgot_password" />
    <TextView android:textColor="@color/colorOnPrimary" android:layout_gravity="start" android:id="@id/forgotPasswordTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/forgot_password_title" android:maxLines="10" android:layout_marginHorizontal="@dimen/horizontal_gutter" android:paddingHorizontal="@dimen/grid8" android:lineHeight="28.0sp" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/titleBar" style="@style/BniText.Body" />
    <com.google.android.material.textfield.TextInputEditText android:id="@id/emailEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email" android:layout_marginHorizontal="@dimen/horizontal_gutter" android:layout_marginVertical="@dimen/grid16" app:layout_constraintTop_toBottomOf="@id/forgotPasswordTitle" style="@style/LoginEditText" />
    <com.google.android.material.button.MaterialButton android:enabled="false" android:id="@id/sendResetLink" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid40" android:text="@string/forgot_password_button" android:layout_marginHorizontal="@dimen/horizontal_gutter" app:layout_constraintTop_toBottomOf="@id/emailEditText" style="@style/BniHeroTextButton" />
    <ImageView android:id="@id/loadingSpinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</com.butterflynetinc.helios.login.forgotpassword.ForgotPasswordView>