<?xml version="1.0" encoding="utf-8"?>
<com.butterflynetinc.helios.welcome.WelcomeView android:background="@drawable/bg_welcome_gradient" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/logoImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/welcome_screen_logo_margin_top" android:src="@drawable/iq_logo_blue_wht" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/probeImage" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="@dimen/welcome_screen_logo_probe_margin" android:src="@drawable/probe_render_welcome" app:layout_constraintDimensionRatio="1:4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_default="percent" app:layout_constraintHeight_percent="0.9" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logoImage" />
    <com.google.android.material.button.MaterialButton android:enabled="false" android:textSize="@dimen/type_large" android:id="@id/loginButton" android:padding="@dimen/grid16" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login" android:translationY="@dimen/welcome_screen_login_button_translation_y" android:layout_marginHorizontal="@dimen/horizontal_gutter" android:layout_marginVertical="@dimen/grid16" app:layout_constraintBottom_toTopOf="@id/discoverButterflyIqButton" style="@style/BniPrimaryTextButton" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/compatibilityContainer" android:paddingTop="@dimen/grid72" android:paddingBottom="@dimen/grid40" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logoImage">
        <TextView android:textColor="@color/bni_white" android:id="@id/compatibilityTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/compatibility_title" style="@style/BniText.Large.Bold" />
        <TextView android:textColor="@color/bni_white" android:gravity="center_horizontal" android:id="@id/compatibilitySubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid8" android:text="@string/compatibility_subtitle" style="@style/BniText.Small" />
        <com.google.android.material.button.MaterialButton android:textColor="@color/bni_white" android:id="@id/compatibilityMoreInformation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/grid24" android:text="@string/learn_more" android:paddingHorizontal="@dimen/grid16" android:paddingVertical="@dimen/grid8" style="@style/BniSmallTextButton" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton android:textColor="@color/bni_white" android:gravity="center" android:id="@id/discoverButterflyIqButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/discover_butterfly_iq" app:backgroundTint="?android:navigationBarColor" app:layout_constraintBottom_toBottomOf="parent" style="@style/BniPrimaryTextButton" />
</com.butterflynetinc.helios.welcome.WelcomeView>