<?xml version="1.0" encoding="utf-8"?>
<com.butterflynetinc.helios.probeavailability.proberegistration.ProbeRegistrationView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/bni_black" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textColor="@color/bni_white" android:id="@id/logoutButton" android:padding="@dimen/grid16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logout" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/BniText.Large.Bold" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/horizontal_gutter_list" app:layout_constraintBottom_toTopOf="@id/registerButton" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/butterflyImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/grid24" android:src="@drawable/bni_logo" />
            <TextView android:textColor="@color/bni_white" android:gravity="center_horizontal" android:id="@id/registerIqTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/grid16" android:text="@string/register_iq_title" style="@style/BniText.ExtraLarge.Bold" />
            <TextView android:textColor="@color/bni_grey25" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register_iq_description" android:paddingHorizontal="@dimen/grid32" app:layout_constraintTop_toBottomOf="@id/registerIqTitle" style="@style/BniText.Body" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton android:id="@id/registerButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/register" android:layout_marginHorizontal="@dimen/horizontal_gutter" android:layout_marginVertical="@dimen/grid16" app:layout_constraintBottom_toTopOf="@id/registerToOrgText" style="@style/BniHeroTextButton" />
        <TextView android:textColor="@color/bni_grey25" android:gravity="center_horizontal" android:id="@id/registerToOrgText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/horizontal_gutter" android:layout_marginVertical="@dimen/grid16" android:paddingHorizontal="@dimen/grid16" app:layout_constraintBottom_toBottomOf="parent" style="@style/BniText.ExtraSmall" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.butterflynetinc.helios.design.view.LoadingHudView android:id="@id/registeringHudView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:text="@string/registering_iq" />
</com.butterflynetinc.helios.probeavailability.proberegistration.ProbeRegistrationView>